ADD Chap 9, sortis de Tuathan

--- a/campagne.tex
+++ b/campagne.tex
@@ -267,11 +267,52 @@ Dans le prochain quartier, si le soir ne nous trouve pas épuisé, notre force v
 
 % ********************************
 \subsection{Faiblesses exacerbées}
-Plus loin, nos propres faiblesses sembles exacerbées par Tuathan. Le passé qui nous rattrape. On arrive rapidement à un temple immense (3-1:41), comme une gigantesque cage toracique avec un trône en son centre. Nous devons combattre un Esprit Précurseur avant de pouvoir examiner le trône couvert d'épines en wyrdroche. \arev{} s'y asseoit et son esprit est aspirés dans les méandres de la Cité \gain{ \life[-4], \terror[3], \magic[6], 2XP, 2 \texttt{quêtes}, «1° Exploration de Tuathan»}.
+Plus loin, nos propres faiblesses sembles exacerbées par Tuathan. Le passé qui nous rattrape. On arrive rapidement à un temple immense (3-1:41), comme une gigantesque cage toracique avec un trône en son centre. Nous devons combattre un Esprit Précurseur avant de pouvoir examiner le trône couvert d'épines en wyrdroche. \ailei{} s'y asseoit et son esprit est aspirés dans les méandres de la Cité \gain{ \life[-4], \terror[3], \magic[6], 2XP, 2 \texttt{quêtes}, «1° Exploration de Tuathan»}.
 
 % ****************
 \subsection{Folie oubliée}
 Avec ce que nous savons maintenant, nous pouvons continuer l'exploration et arriver dans un lieu étrange, stase et transes nous débarasse de notre peur de la folie. Nous voilà bientôt entourés d'étrange statues d'argile sans visage (5-3:47). Quand elles commencent à communiquer par des ``moi ?'' (39), nos tentatives pour en savoir plus les transforment en nous-même. Et elles attaquent \gain{\texttt{quête}}. Un autre combat (V) et nous arrivons à une petite forge dont le sol est couvert de tâches de sang (6-1:60). Attaqué par un ``chevalier errant'', on profite de l'occasion pour forger des rubis avec notre propre sang \secret{462}, \gain{\terror[1], \rich[6], \texttt{quête}}. Une volonté trop marquée d'explorer nous amène ensuite dans une champignonière (2Q-55) où l'on peut se reposer (63) \gain{\nrj[1]} et dormir \secret{415} \gain{\texttt{quête}}. Toujours plus loin, (3-1:10) un endroit où les choses et les êtres se réparent \gain{\life[1]}, mais il ne faut pas s'attarder car finalement l'endroit s'effondre \secret{475} \gain{\life[-2], \terror[2], \nour[-1] par membre du groupe, \texttt{quête}}. Quand on reprend nos esprits, on parvient enfin à gagner le \coeurtuathan{}.
+
+% ******************************
+\subsection{C\oe{}ur de Tuathan}
+Cela ressemble en tous points à Camelot, mais inversée. En s'approchant des portes, il y a des traces de combat avec des Précurseurs. Une fois entrés dans la citadelle, nous gagnons d'abord les appartements (2) en passant par le laboratoire de Morgane, mais mieux rangé et avec des livres qui fondent quand on tente de les consulter. Plus loin dans les couloirs (4), nous parvenons à la salle du trône, vide, avec un emplacement pour le graal au dessus du trône. On y dépose le Graal, se qui nous soulage. Dans la salle de la table ronde (7), il n'y qu'une fosse remplie de sang en ébulition. En face de nous, la colossale silhouette d'\arthur{}...
+
+Nous approchons, \secret{555}, pour voir \arthur{} qui nous désigne de ses mains percée, mais où nul sang ne coule, \excalibur{}. \morgane{}, moqueuse et souriant à la manière d'un carnassier. Elle assure que nous, les «idiots», ne savaient pas et qu'elle nous a attiré sur le lieu de notre naissance !! «La où ton (\arthur{}) règne s'est effondré». Nous décidons d'aider d'obéir à \arthur{} et \ailei{} tente de se saisir de l'épée \secret{508} alors que \morgane{} s'écrie «Si vous retirez cette épée, cette Camelot sera engloutie par le Wyrd, et nous avec. Les Précurseurs contrôleront de nouveau le c\oe{}ur de Tuathan. Vous allez défaire tout ce pour quoi l'humanité s'est battue.» Cela ne nous arrête pas, \secret{456} \ailei{} sent la puissance infuser en elle par l'intermédiaire d'\excalibur{}, mais c'est douloureux. \morgane{} ordonne à \gaheris{} de s'interposer \secret{480}. Nous parvenons à le vaincre une première fois mais \morgane{} le relève, encore plus puissant \secret{388}. \secret{444}, \gaheris{} est vaincu une seconde fois, mais nous sommes tous à moitié morts. \secret{24} \morgane{} s'enfuit alors et \ailei{} prend possession d'\excalibur{} \secret{78}. La forteresse commence alors à fondre et la sortie semble toute indiquée, sans qu'\arthur{} ne se décide à nous suivre. \gain{5XP}. \secret{610} puis \secret{612}, sans le \graal{} mais avec \excalibur{}, nous revoici dans le \coeurtuathan{}.
+
+% ****************************************************************************
+% ***************************************************************** Chapitre 9 
+% ****************************************************************************
+\section{Chapitre 9}
+
+(La mort nous a saisi, mais nous repartons de plus belle)
+
+Il est temps de repartir à travers \tuathan{}.
+
+% *********************************
+\subsection{Nourriture et Richesse}
+De nouveau, il semble qu'il faille se nourrir d'or à la place de nourriture. (6-4:59), nous devons nous faufiler entre des filaments mais nous en touchons (46) un qui nous plonge dans un sommeil presque cauchemardesque ou nous revoyons \cuanacht{} qui attend notre aide \gain{\terror[2]}, puis une cellule de l'hospice insulaire... \gain{«4° Exploration de Tuathan», 1XP, \texttt{quête}}. (1-2:16) Nous repassons par l'escalier ou nous voyons notre dos devant nous ce qui terrifie ceux moins habitué à la magie \gain{\texttt{quête}, 1XP si 3 en Spiritualité}.
+
+% ********************************
+\subsection{Faiblesses exacerbées}
+Comme précédemment, nos propres faiblesses sembles exacerbées par Tuathan. Nous traverson une champignonière (1-3:20) où nous nous reponsons sur la mousse (46) \gain{\nrj[1]}, sans nous attarder \gain{\nrj[-2], \texttt{quête}}. Une altercation avec une créature du wyrd (6-6 puis 2-5) nous incite à aller voir plus loin \gain{\texttt{quête}}.
+
+\subsection{Terreur et Vie}
+De nouveau, lors du repos, les pertes de \life{} et \terror{} sont inversées. Dans ce quartier, (1-1:6), les murs sont constitués de vers grouillants, ce qui est affreusement angoissant \gain{\terror[3], \texttt{quête}}. Il faut traverser une membrane tendue au travers de la rue pour aller plus loin (5-4:27), les autres peaux nous parlent, une sensation destabilisante (12) \gain{\terror[1] par Spiritualité, 2 \texttt{quêtes}}.
+
+
+% ***********************************
+\subsection{Epuisé ou la vie s'en va}
+Après avoir constaté que la \resolutionorrin{} avait ``bougé'' (elle est introuvable), nous ressentons de nouveau cette impression que si le soir ne nous trouve pas épuisé, notre force vitale est aspirée au loin. Nous sommes maintenant dans un véritable labyrinthe (3-1:13) avec une fontaine dont nous touchons l'eau (32), pour nous retrouver brusquement de l'autre côté, grandement perturbés \gain{\terror[3], \texttt{quête}}.
+
+% ****************
+\subsection{Folie oubliée}
+Enfin, nous retrouvons cet état de stase qui nous débarasse de notre peur de la folie. Bientôt entourés de gens perdus qui essaient de se comporter comme des humains. Nous parvenons à les gérer \gain{1XP, \texttt{quête}} avant de gagner une vaste forêt (2-4:30) d'où émerge une féroce créature, \gain{\texttt{quête}}.
+
+Notre cheminement dans le Wyrd de \tuathan{} a duré bien trop longtemps \secret{666}. C'est à genoux que nous atteignons difficilement la \valleegardiens{}, malheureusement gardée par un puissant Précurseur. Après une courte prière, nous tentons de discuter avec lui \secret{696}. Comme il admet que nous ne sommes pas une menace \secret{530}, il nous épargne. Et nous nous réveillons dans une petite infirmerie, veillés par \orrin{}. \gain{perte tous objets sauf 2, \life[4], \terror[-4], \nrj[] au max; «Vent du Wyrd»} plus de ``repos troublé''\secret{67}.
+
+\secret{7} En regagnant doucement nos forces, nous réalisons que nous avons été absents un mois. \secret{2} la guerre a fait rage dans l'ouest et \mordred{}, Seigneur de \nidcorbeaux{} a rasé \boismuraille{} et \loincomtat{} \gain{«2° Egarés et Déchus», «3° Egarés et Déchus»}. \secret{5} puis \secret{9}, \cuanacht{} est au bords de l'extinction, \camelot{] nous prie de venir rapidement alors qu'une cité de l'ouest nous propose une mission très lucrative (ce qui paraît difficile maintenant qu'elles ont été rasées ??). Mais, dit \orrin{}, le voyage sera difficile, voir impossible, car ``de très nombreux Menhirs brisés et le Wyrd a envahi une partie du Royaume'' \gain{retirer lieux \cuanacht{}, \tumulus{}, \lacmiroir{} et \newcamelot{}}. Cependant, \secret{3}, \orrin{} nous apprend que la réalité, notre monde, est le lieu où se rendent les Précurseurs destinés aux enfers. Et le Menhirs permettent d'observer ce monde, Menhir dont \merlin{} et \arthur{} ont augmenté la puissance pour que les lois de notre monde aient aussi cours autour d'eux. Il est ainsi possible de construire quelque chose qui permet de voyager dans le Wyrd \gain{«Enigme du Vieiacier» si on ne l'avait pas}.
+
+
 
 
 
