--- a/common.tex
+++ b/common.tex
@@ -240,6 +240,7 @@
 }
 \def\agravain{\perso{Agravain}}
 \def\amergin{\perso{Amergin}}
+\def\ailei{\perso{Ailei}}
 \def\arev{\perso{Arev}}
 \def\arthur{\perso{Arthur}}
 \def\aubert{\perso{Aubert}}
@@ -263,6 +264,7 @@
 \def\lamorak{\perso{Lamorak}}
 \def\lancelot{\perso{Lancelot}}
 \def\macha{\perso{Macha}}
+\def\merlin{\perso{Merlin}}
 \def\mordred{\perso{Mordred}}
 \def\morfran{\perso{Morfran}}
 \def\morgane{\perso{Morgane}}
@@ -278,6 +280,7 @@
   \texttt{#1}\index{\IfNoValueTF{#2}{#1}{#2@#1}}%
 }
 \def\craie{\art{Craie Rituelle}}
+\def\excalibur{\art{Excalibur}}
 \def\graal{\art{Graal}}
 \def\fauxgraal{\art{Faux Graal}}
 \def\guivre{\art{Guivre}}
