--- a/campagne.tex
+++ b/campagne.tex
@@ -312,6 +312,30 @@ Notre cheminement dans le Wyrd de \tuathan{} a duré bien trop longtemps \secret
 
 \secret{7} En regagnant doucement nos forces, nous réalisons que nous avons été absents un mois. \secret{2} la guerre a fait rage dans l'ouest et \mordred{}, Seigneur de \nidcorbeaux{} a rasé \boismuraille{} et \loincomtat{} \gain{«2° Egarés et Déchus», «3° Egarés et Déchus»}. \secret{5} puis \secret{9}, \cuanacht{} est au bords de l'extinction, \camelot{] nous prie de venir rapidement alors qu'une cité de l'ouest nous propose une mission très lucrative (ce qui paraît difficile maintenant qu'elles ont été rasées ??). Mais, dit \orrin{}, le voyage sera difficile, voir impossible, car ``de très nombreux Menhirs brisés et le Wyrd a envahi une partie du Royaume'' \gain{retirer lieux \cuanacht{}, \tumulus{}, \lacmiroir{} et \newcamelot{}}. Cependant, \secret{3}, \orrin{} nous apprend que la réalité, notre monde, est le lieu où se rendent les Précurseurs destinés aux enfers. Et le Menhirs permettent d'observer ce monde, Menhir dont \merlin{} et \arthur{} ont augmenté la puissance pour que les lois de notre monde aient aussi cours autour d'eux. Il est ainsi possible de construire quelque chose qui permet de voyager dans le Wyrd \gain{«Enigme du Vieiacier» si on ne l'avait pas}.
 
+% ****************************************************************************
+% **************************************************************** Chapitre 10 
+% ****************************************************************************
+\section{Chapitre 10}
+
+Le savoir partagé par \orrin{} nous permettrait de construire des sortes de Menhirs, mais pour cela il faudrait des outils spéciaux, les \outilspierre{}. Alors que nous cherchons comment nous allons pouvoir les trouver, \beor{} se souvient qu'il les détient depuis... longtemps, enfin depuis qu'une vieille les lui a donné à \loincomtat{}. Bon, c'est déjà ça.
+
+Il nous faut donc trouver du \wyrdroche{} le plus pur possible, il semble qu'il y en ait du côté de \loincomtat{}, justement. Alors nous voilà partis.
+
+\questOK{Trouve une \wyrdparfait{}}{Les anciennes mines à côté de \loincomtat{} pourraient encore en contenir.}{Trouvé à \devastation{}}
+
+Nous quittons donc \longcairn{} après avoir combattu un Mur d'Âmes Maudites qui nous tombe dessus depuis la \valleegardiens{}. Arrivés au \visageserein{}, on pousse jusqu'au \cerclelunaire{}. Là, un voyage au centre du cercle nous montre combien nos problèmes sont futiles et qu'il est aisé de les envisager sous un nouveau jour (\gain{-2XP, \nour[3] ou \rich[1] ou \magic[3] pour changer de \competence{}}. Après une visite à l'archidruide \amergin{}, il nous indique que nous n'avons pas encore assez de puissance (il faudrait le \secret{65} avec un cadran sur 5). Au niveau des masures (1), un Druide puis la foule insultent \larve{}, qualifié de traître \secret{211}. Mais \larve{} sait montrer qu'il a changé \secret{102} pour être finalement accueilli comme le fils prodigue \gain{ «Rédemption de Larve», 2XP}. Enfin, nous allons arbitrer la succession de \geraint{} en dénonçant les agissements passés de \morfran{} (esclavagiste) ou \breagach{} (faussaire), ce qui promeut la cousine de \geraint{} comme pouvant lui succéder \gain{«6° Restaurer l'Ordre», 2XP}.
+
+Un aller retour infructueux vers la \croisee{} et nous voilà au \valsanglant{}. Le champ de bataille est devenu silencieux, il ne reste que des charognards. On décide de traverser le champ de bataille \gain{\life[-1]}, ce qui nous fait affronter une créature de cauchemar \gain{\rich[1]}. Petite halte \sousmuraille{} pour chasser, et nous voilà arrivé à \loincomtat{} que le Wyrd a envahi. Il n'en reste plus qu'un \dolmeneffondre{} et une longue colonne de réfugiés. Nous essayons de trouver le grand hall de la reine \kincaid{}, il faut creuser pour en déblayer un accès,ce qui demande de l'énergie et de convaincre les habitants. On y sauve une jeune fille, \siobhan{}, la fille de la Reine qui s'enfuit en jurant de se venger (mais on ne sait pas de qui). Avond nous libéré un démon ? \gain{\terror[2], 2XP, \rich[5], «7° Egarés et Déchus»}.
+
+Nous atteigons \devastation{} sous une pluie torrentielle. C'est là, dans les profondeurs des mines (8+) que nous atteignons les galeries anciennes dont il possible d'extraire un morceu de \wyrdparfait{} \secret{158}. Reste maintenant à le ramner à \orrin{}, ce qui ne sera pas une mince affaire.
+
+\questOK{Ramener la \wyrdparfait{}}{\orrin{} l'attend à \longcairn{}}{Fait, lentement}
+
+Sous un temps magnifique, nous nous attelons à la tâche. En passant d'abord par le  \valsanglant{}, \visageserein{} et enfin \longcairn{}. Là, \orrin{} façonne doucement une silhouette encapuchonnée en nous expliquant que notre réalité exerce une fascination sur les Précurseurs, une sorte d'enfer qu'ils ont voulu observer par le biais des Menhirs. L'\oe{}uvre terminée, \orrin{} effrayé annonce qu'il y a un prix, lourd, à payer : l'essence d'un être vivant. Nous nous proposons \secret{571}, mais \orrin{} explique que notre essence vital est ``particulière'', insoumise et impossible à soumettre, elle finirait par quitter la pierre \gain{\terror[1], 1XP}... \orrin{} se sacrifie donc \secret{533} en nous recommandant d'user de notre (grand) pouvoir à bon escient, ne pas répéter le passé, aller de l'avant. \gain{\terror[1], 2XP, \menhirrudiment{} \secret{15}}.
+
+
+  
+
 
 
 
