--- a/campagne.tex
+++ b/campagne.tex
@@ -333,6 +333,33 @@ Nous atteigons \devastation{} sous une pluie torrentielle. C'est là, dans les p
 
 Sous un temps magnifique, nous nous attelons à la tâche. En passant d'abord par le  \valsanglant{}, \visageserein{} et enfin \longcairn{}. Là, \orrin{} façonne doucement une silhouette encapuchonnée en nous expliquant que notre réalité exerce une fascination sur les Précurseurs, une sorte d'enfer qu'ils ont voulu observer par le biais des Menhirs. L'\oe{}uvre terminée, \orrin{} effrayé annonce qu'il y a un prix, lourd, à payer : l'essence d'un être vivant. Nous nous proposons \secret{571}, mais \orrin{} explique que notre essence vital est ``particulière'', insoumise et impossible à soumettre, elle finirait par quitter la pierre \gain{\terror[1], 1XP}... \orrin{} se sacrifie donc \secret{533} en nous recommandant d'user de notre (grand) pouvoir à bon escient, ne pas répéter le passé, aller de l'avant. \gain{\terror[1], 2XP, \menhirrudiment{} \secret{15}}.
 
+% ****************************************************************************
+% **************************************************************** Chapitre 11
+% ****************************************************************************
+\section{Chapitre 11}
+
+Toujours à \longcairn{}, il nous faut choisir un avenir entre 1) aider notre village natal de \cuanacht{}, 2) aider \newcamelot{} ou 3) aider nos ``alliés'' (même si nous ne savons pas trop qui sont nos alliés). Ne sachant pas trop que faire, nous décidons d'aller voir \mordred{} à \nidcorbeaux{}. Avec le beau temps, on voyage rapidement jusqu'à \croisee{} d'où nous utilisons notre menhir portable pour révéler \nidcorbeaux{}. \beor{}, parti seul, va scruter la Pierre des Rancunes mais n'y gagne que \gain{\terror[1]} et pas grand chose qui nous permettrait d'apaiser la guerre en avalon. Il remarque néanmoins (7) qu'\aelisa{}, une célèbre marchande de \boismuraille{}, a fait appel à des mercenaires pour éliminer ses partenaires commerciaux, mercenaires qu'elle a ensuite dupé. Il y a de quoi là organiser un beau chantage \gain{ «3° Pillard», \secret{9} ``Informations confidentielles''}. \beor{} se dirige ensuite vers les huttes de pierre où il aide les réfugiés (\gain{\rep[5], \rich[-5]} et visite les bâtiments commerciaux (3) \gain{\rich[1], \nrj[-1]}.
+
+On arrive à \nidcorbeaux{} sous une pluie torrentielle. Nous allons voir \mordred{} qui nous reçoit bien que nous ne soyons pas des alliées d'Avalon (17). Pour ancrer son pouvoir dans cette partie de l'île, il souhaiterait les grimoires de sa mère \morgane{}, ce qui laisserait Camelot sans défense. \gain{«5° Eclaireur»}.
+
+\quest{Récupérer les grimoires à \newcamelot{} ou rejoignez une des autres puissances en Avalon.}
+
+Nous passons ensuite au marché (10) pour faire le plein de provision \gain{\rich[-1], \nour[1]}.
+
+Bon ! Allons voir comment se porte \cuanacht{}...
+
+On redescend vers le sud, en passant par la \croisee{}, le \cerclelunaire{}, le \visageserein{} et le \valsanglant{}. De là, nous révélons le \tumulus{} pour s'apercevoir que son menhir à disparu, englouti comme le tumulus. On appelle maintenant ce lieu le \tumulusengloutis{} \trade{e1v1>M1}. Comme le temps s'améliore, on rejoint le \bosquet{} pour arriver à un \cuanachtdevaste{}. Les quelques dizaines de personnes qui sont encore là nous demandent de l'aide, et nous acceptons (1). Il faut pour cela trouver deux endroits sûrs (6) et \secret{777} \gain{+2XP, \secret{4} ``Enragé'' et \secret{42} ``Méfiance''}.
+
+% ****************************************************************************
+% **************************************************************** Chapitre 13 
+% ****************************************************************************
+\section{Chapitre 13}
+
+
+
+
+
+
 
   
 
