--- a/common.tex
+++ b/common.tex
@@ -200,6 +200,7 @@
 \def\cornes{\lieu{Cornes du Sud}[120]}
 \def\croisee{\lieu{Croisée}[152][Croisee]}
 \def\cuanacht{\lieu{Cuanacht}[101]}
+\def\cuanachtdevaste{\lieu{Cuanacht Dévasté}[101][Cuanacht Devaste]}
 \def\debacle{\lieu{Debâcle}[118][Debacle]}
 \def\devastation{\lieu{Dévastation}[139][Devastation]}
 \def\dolmeneffondre{\lieu{Dolmen Effondré}[126][Dolmen Effondre]}
@@ -230,6 +231,7 @@
 \def\tordracine{\lieu{Tordracine}[114]}
 \def\tuathan{\lieu{Tuathan}[199]}
 \def\tumulus{\lieu{Tumulus des Précurseurs}[106][Tumulus des Precurseurs]}
+\def\tumulusengloutis{\lieu{Tumulus Engloutis}[123]}
 \def\valleegardiens{\lieu{Vallée des Gardiens}[150][Valle des Gardiens]}
 \def\valsanglant{\lieu{Val Sanglant}[112]}
 \def\visageserein{\lieu{Visage Serein}[132]}
@@ -239,6 +241,7 @@
 \NewDocumentCommand{\perso}{m o}{%
   \textbf{#1}\index{\IfNoValueTF{#2}{#1}{#2@#1}}%
 }
+\def\aelisa{\perso{Aelisa}}
 \def\agravain{\perso{Agravain}}
 \def\amergin{\perso{Amergin}}
 \def\ailei{\perso{Ailei}}
