ADD début Chap13

--- a/campagne.tex
+++ b/campagne.tex
@@ -355,6 +355,21 @@ On redescend vers le sud, en passant par la \croisee{}, le \cerclelunaire{}, le 
 % ****************************************************************************
 \section{Chapitre 13}
 
+Au moment de quitter \cuanachtdevaste{}, nous faisons une rencontre inattendue en la personne du Roi \arthur{}. Il semble se diriger vers \camelot{}, mais pour quel dessein ?
+
+\quest{Destin final d'Arthur}{Que va faire \arthur{}?}
+
+Pour l'heure, nous nous dirigeons vers le sud et les \lames{}. Cette fois, nous ggrimpons tout en haut des gigantesques épées, pour y découvrir que des feuilles d'or couvrent en partie le pommeau \gain{1XP, \rich[2], «1° trésors cachés»}. Ensuite, \beor{} fabrique un bouclier en osier. Avec la nuit, nous rêvons de la première bataille, où \arthur{} fit mettre un genoux à terre au géants \gain{\terror[-1]}.
+
+Le temps se maintient au beau, on pousse jusqu'à \larvebois{}, un endroit peu agréable qui grouille de larves blanches. Nous cherchons à atteindre le c\oe{}ur de la forêt, pour y découvrir un précurseur bien diminué. Il nous demande d'aller quérir son anneaux, que l'on décide de garder en éliminant la créature. Rêver, ou cauchemarder ici n'est pas de tout repos...
+
+Le temps est magnifique, on remonte vers le \bosquet{} puis \blanc{} sous une lune magnifique. Les habitants sont encore plus malades qu'avant (14-15) \gain{«4° remède»} mais acceptent de nous aider (7-12-4) en nous offrant un objet. Le lendemain nous voit chasser à \tordracine{} avant d'arriver au \lacsec{} dans la tempête.
+
+Au centre du lac d'où l'eau s'est retirée, une épine de wyrdroche abrite une grotte labyrinthique. On y trouve la \dame{}, fatiguée et alitée. Elle pense qu'il existe peut-être un endroit sûr le long de la côte, du côté des bateaux (?) mais, plus sûrement, vers le \visageserein{}, ce qui demandera de briser les sceaux \gain{«6° rêves et prophéties»}.
+
+\quest{Visage Serein}{Aller au \visageserein{} et le transformer en Refuge.}
+
+
 
 
 
