--- a/common.tex
+++ b/common.tex
@@ -210,6 +210,7 @@
 \def\foire{\lieu{Foire du Guerrier}[103]}
 \def\hospice{\lieu{Hospice Insulaire}[109]}
 \def\lacmiroir{\lieu{Lac Miroir}[113]}
+\def\lacsec{\lieu{Lac Asseché}[122][Lac Asseche]}
 \def\lames{\lieu{Lames de la Mélancholie}[105][Lames de la Melancholie]}
 \def\larvebois{\lieu{Larvebois}[108]}
 \def\loincomtat{\lieu{Loincomtat}[116]}
